--- a/info.html
+++ b/info.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>stie</title>
+    <title>shirts mengo</title>
     <link rel="shortcut icon" href="imagens/pngegg.png" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
 
 </head>
 <body>  
-    <header> 
-        <div class="img-container">
-        <img src="imagens/transparent-text-line-technology-diagram-sharing-layer1-crenet-strony-internetowe-gdynia-stron5e4eaad2d39608.9019504615822138428667.png">   
-        <h1>Programação</h1>
+    <body>
+        <div class="inicio">
+            <img class="nega" src="./imagens/Default_A_highcontrast_vibrant_graffiti_logo_of_strack_in_bold_3-removebg-preview(1).png">
         </div>
     </header>
     <nav>
