--- a/contatos.html
+++ b/contatos.html
@@ -13,8 +13,7 @@
 <body>  
     <body>
         <div class="inicio">
-            <img width="125px" src="./imagens/Flamengo_braz_logo.svg.png">
-            <h1 class="titulo">  Shirts Flamengo</h1>
+            <img class="nega" src="./imagens/Default_A_highcontrast_vibrant_graffiti_logo_of_strack_in_bold_3-removebg-preview(1).png">
         </div>
     </header>
     <nav>
