--- a/info.html
+++ b/info.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="camisas.html">camisas</a></li>
             <li><a href="blusas.html">moletom</a></li>
-            <li><a href="contatos.html">Contato</a></li>
+            <li><a href="diversos.html">diversos</a></li>
             <li><a href="info.html">Informações</a></li>
         </ul>
     </nav>
