--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shirts mengo</title>
+    <title>strack</title>
     <link rel="shortcut icon" href="imagens/pngegg.png" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
@@ -25,11 +25,15 @@
         </ul>
     </nav>
     <section>
-        <h1>Turmas</h1>
+        <h1>ENTRE EM CONTATO PARA SER EFETUADA A COMPRA!</h1>
         <hr>
+        <center>
+        <h2>INSTAGRAM:strackw7
+            <h2></h2>TELEFONE:42997842938
+        </center>
         
         <table>
-            <caption>Legenda da tabela</caption>
+            <caption>ESCOLHA O TAMANHO DO PRODUTO</caption>
             <tr>
                 <th colspan="3"
                 >Tabela</th>
@@ -40,23 +44,25 @@
                 <th>Coluna 3</th>
             </tr>
             <tr>
-             <td>1° A</td>
-             <td>1° B</td>
-             <td>1° C</td>
+             <td>M</td>
+             <td>P</td>
+             <td>G</td>
             </tr>
             <tr>
-                <td>2° A</td>
-                <td>2° B</td>
-                <td>2° C</td>
+                <td>GG</td>
+                <td>G1</td>
+                <td>G2</td>
             </tr>
             <tr>
-                <td>3° A</td>
-                <td>3° B</td>
-                <td>3° C</td>
+                <td>G3</td>
+                <td>G4</td>
+                <td>G5</td>
             </tr>
         </table>
     </section>
 
     <footer>
         <p>&#9904; Todos os direitos reservados. &#9760;</p>
+        Desenvolvido por Felipe Strack<br>
+    Github: strackfelipe
     </footer>
